--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "gulp-uglify": "^3.0.2"
     },
     "dependencies": {
+        "@fancyapps/fancybox": "^3.5.7",
         "ion-rangeslider": "^2.3.1",
         "jquery.formstyler": "^1.7.5-repackage",
         "magnific-popup": "^1.1.0",
