added upload page

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@fancyapps/fancybox": "^3.5.7",
         "ion-rangeslider": "^2.3.1",
+        "jquery-form-styler": "^2.0.2",
         "jquery.formstyler": "^1.7.5-repackage",
         "magnific-popup": "^1.1.0",
         "mixitup": "^3.3.1",
